cmake_minimum_required(VERSION 3.15 FATAL_ERROR)

file(GLOB_RECURSE KONTAKT_CORE_HEADERS ${KONTAKT_INCLUDE_DIR}/core/*.h)
file(GLOB_RECURSE KONTAKT_CORE_SOURCES ${KONTAKT_SRC_DIR}/core/*.cpp)
source_group(Core FILES ${KONTAKT_CORE_HEADERS} ${KONTAKT_CORE_SOURCES})

file(GLOB_RECURSE KONTAKT_RENDER_HEADERS ${KONTAKT_INCLUDE_DIR}/render/*.h)
file(GLOB_RECURSE KONTAKT_RENDER_SOURCES ${KONTAKT_SRC_DIR}/render/*.cpp)
source_group(Render FILES ${KONTAKT_RENDER_HEADERS} ${KONTAKT_RENDER_SOURCES})

file(GLOB_RECURSE KONTAKT_APP_HEADERS ${KONTAKT_INCLUDE_DIR}/application/*.h)
file(GLOB_RECURSE KONTAKT_APP_SOURCES ${KONTAKT_SRC_DIR}/application/*.cpp)
source_group(Application FILES ${KONTAKT_APP_HEADERS} ${KONTAKT_APP_SOURCES})

add_library(Kontakt ${KONTAKT_CORE_HEADERS} ${KONTAKT_CORE_SOURCES} ${KONTAKT_RENDER_HEADERS} ${KONTAKT_RENDER_SOURCES} ${KONTAKT_APP_HEADERS} ${KONTAKT_APP_SOURCES}) 

target_include_directories(Kontakt PRIVATE ${KONTAKT_INCLUDE_DIR})

target_include_directories(Kontakt PRIVATE ${Vulkan_INCLUDE_DIR})
target_link_libraries(Kontakt ${Vulkan_LIBRARY})